Main section added

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -24,6 +24,7 @@
           </nav>
          </header>
         
+        <main>
           <hr><h1><b>HTML Elements</b></h1><hr>
 
           <h2>Ordered List</h2>
@@ -128,7 +129,7 @@
             <footer>
             Copyright Epam Systems
             </footer>
-
+        </main>
         </div>
       </div>
     </div>
